--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     // end::actuator[]
 
     compile 'org.codehaus.groovy:groovy-all:2.3.6'
+    compile 'org.axonframework:axon-core:2.3.1'
 
     testCompile("junit:junit")
 }
